메인 화면에서 사이드 메뉴 추가 라이선스 항목 텍스트와 이미지 개행 기본 포스트 예제 주석 구독 항목 비활성 데이터베이스 역사 게시글 게시

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,5 +2,19 @@ header:
   - title: 아카이브
     url: /archive.html
 
-#  - title: 소개
-#    url: /about.html
+  #  - title: 소개
+  #    url: /about.html
+
+sideLayout:
+  - title:      Start
+    children:
+      - title: 아카이브
+        url: /archive.html
+      - title: 소개
+        url: /about.html
+  - title:      Customization
+    children:
+      - title: 아카이브
+        url: /archive.html
+      - title: 소개
+        url: /about.html
